--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,3 @@
-API_URL=https://api.api-ninjas.com/
-API_KEY=Nj2f/TlaYayL7pxRzr52Bw==rZYFNW5zWy8lgtau
+VITE_API_URL=https://api.spoonacular.com
 
 APP_HOST=http://localhost:5173/
